--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-Flask==2.2.2
-Flask-SQLAlchemy==3.0.3
-Flask-Bcrypt==1.0.1
-Flask-JWT-Extended==4.4.4
-psycopg2-binary==2.9.6
-Werkzeug==2.2.3
+fastapi
+uvicorn
+sqlalchemy
+psycopg2
+passlib
+python-jose
+python-dotenv
+python-multipart
