--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,32 @@
-fastapi
-uvicorn
-sqlalchemy
-psycopg2
-passlib
-python-jose
-python-dotenv
+annotated-types==0.7.0
+anyio==4.6.2.post1
+bcrypt==4.2.0
+click==8.1.7
+ecdsa==0.19.0
+fastapi==0.115.4
+Flask==2.2.2
+Flask-Bcrypt==1.0.1
+Flask-JWT-Extended==4.4.4
+Flask-SQLAlchemy==3.0.3
+h11==0.14.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.4
+jose==1.0.0
+MarkupSafe==3.0.2
+passlib==1.7.4
+psycopg2-binary==2.9.6
+pyasn1==0.6.1
+pydantic==2.9.2
+pydantic_core==2.23.4
+PyJWT==2.9.0
+python-jose==3.3.0
+python-multipart==0.0.17
+rsa==4.9
+six==1.16.0
+sniffio==1.3.1
+SQLAlchemy==2.0.36
+starlette==0.41.2
+typing_extensions==4.12.2
+uvicorn==0.32.0
+Werkzeug==2.2.3
