--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+alembic==1.14.0
 annotated-types==0.7.0
 anyio==4.6.2.post1
 bcrypt==4.2.0
 click==8.1.7
+dnspython==2.7.0
 ecdsa==0.19.0
+email_validator==2.2.0
 fastapi==0.115.4
 Flask==2.2.2
 Flask-Bcrypt==1.0.1
@@ -13,6 +16,7 @@ idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
 jose==1.0.0
+Mako==1.3.6
 MarkupSafe==3.0.2
 passlib==1.7.4
 psycopg2-binary==2.9.6
@@ -20,6 +24,7 @@ pyasn1==0.6.1
 pydantic==2.9.2
 pydantic_core==2.23.4
 PyJWT==2.9.0
+python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.17
 rsa==4.9
